<resources>
    <string name="app_name">PolitikPediaXML</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="email_validation">Maaf, Format Email Tidak Sesuai</string>
    <string name="password_length">Password Harus Lebih Dari 8 Karakter</string>
    <string name="wrong_title">Sorry 😭</string>
    <string name="wrong_message">Your Email or Password is Wrong!</string>
    <string name="email_taken">Your Email Already Taken</string>
    <string name="login_success">Login Berhasil</string>
    <string name="continueLogin">Lanjut</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_capres">Capres Page</string>
    <string name="title_partai">Partai</string>
    <string name="title_anggota">Anggota Partai</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite">Favorite</string>

    <string-array name="data_name">
        <item>PDI (Partai Demokrasi Indonesia)</item>
        <item>PAN (Partai Amanat Nasional)</item>
        <item>HANURA (Partai Hati Nurani Rakyat)</item>
        <item>PKS (Partai Keadilan Sejahtera)</item>
        <item>PERINDO (Partai Persatuan Indonesia)</item>
        <item>PSI (Partai Solidaritas Indoensia)</item>
        <item>Golkar (Partai Golongan Karya)</item>
        <item>PBB (Partai Bulan Bintang)</item>
        <item>Demokrat</item>
        <item>PKB (Partai Kebangkitan Bangsa)</item>
    </string-array>
    <string-array name="data_description">
        <item>Partai Demokrasi Indonesia Perjuangan (PDI-P) adalah sebuah partai politik Indonesia,
            dan partai dari Presiden Indonesia saat ini, Joko Widodo, PDI-P saat ini dipimpin oleh
            Megawati Soekarnoputri, Presiden Kelima Indonesia, dan merupakan putri dari Presiden Pertama
            Indonesia Soekarno. Ideologi partai didasarkan pada filosofi nasional resmi Indonesia, yaitu
            Pancasila.</item>
        <item>Partai Amanat Nasional (disingkat: PAN) adalah sebuah partai politik di Indonesia.
            Asas partai ini adalah Akhlak Politik Berlandaskan Agama yang Membawa Rahmat bagi Sekalian
            Alam (AD Bab II, Pasal 3 [2]). PAN didirikan oleh Amien Rais pada tanggal 23 Agustus 1998
            berdasarkan pengesahan Depkeh HAM No. M-20.UM.06.08 tgl. 27 Agustus 2003. Ketua Umum saat
            ini adalah Zulkifli Hasan. Ketua Majelis Pertimbangan Partai dijabat oleh Hatta Rajasa,
            Tatong Bara, Yasti Soepredjo Mokoagow, sedangkan Ketua Dewan Kehormatan Partai dijabat oleh
            Soetrisno Bachir.</item>
        <item>Partai Hati Nurani Rakyat, atau Partai Hanura, adalah sebuah partai politik di Indonesia.
            Jenderal TNI (Purn.) Dr. H. Wiranto Merupakan tokoh kunci berdirinya partai. Pada Pemilu
            2009, partai ini bernomor urut 1.Hanura kembali lolos dalam Pemilu 2014, dan mendapat
            nomor urut 10.[2] Pada Pemilu 2019, Hanura hadir sebagai peserta pemilu dengan nomor urut 13.
            Pada Pemilu 2024, Hanura kembali mendapat nomor urut 10</item>
        <item>Partai Keadilan Sejahtera (PKS) adalah sebuah partai politik berbasis Islam di Indonesia.
            Partai ini bercikal bakal dari penentangan sejumlah tokoh Islam terhadap kebijakan
            Presiden RI ke-2, Suharto yang mengharuskan agar tiap-tiap ormas menjadikan Pancasila sebagai
            asas mereka.[11][12] Dari penentangan ini lahirlah gerakan-gerakan tarbiyah.Gerakan-gerakan
            tarbiyah ini lalu membentuk lembaga dakwah kampus yang kemudian menjadi asal usul berdirinya
            Partai Keadilan pada 20 Juli 1998 pasca lengsernya pemerintahan Suharto. Partai Keadilan
            kemudian bertransformasi menjadi Partai Keadilan Sejahtera pada tanggal 20 April 2002 akibat
            gagal memenuhi ambang batas parlemen sebesar 2%.</item>
        <item>Partai Persatuan Indonesia atau biasa disingkat Partai Perindo adalah sebuah partai politik
            di Indonesia. Partai ini didirikan oleh Hary Tanoesoedibjo, pengusaha dan pemilik perusahaan
            konglomerat multinasional MNC Group. Awalnya Perindo adalah organisasi kemasyarakatan yang
            dideklarasikan pada 24 Februari 2013 di Istora Senayan, Jakarta.[2][3] Perindo kemudian
            didirikan sebagai partai politik pada tanggal 8 Oktober 2014[4] dan dideklarasikan pada
            7 Februari 2015 di Jakarta International Expo, Kemayoran, Jakarta.[5] Pada acara deklarasi
            tersebut, dihadiri oleh beberapa petinggi Koalisi Merah Putih (KMP), seperti Ketua Umum Partai
            Golkar Aburizal Bakrie, Ketua Umum Partai Amanat Nasional Hatta Rajasa, Presiden Partai Keadilan
            Sejahtera Anis Matta, dan Ketua Umum Partai Persatuan Pembangunan Djan Faridz. Selain itu juga
            hadir Wiranto, Ketua Umum Hanura.</item>
        <item>Partai Solidaritas Indonesia (disingkat PSI) adalah partai politik di Indonesia yang didirikan
            pasca Pemilu tahun 2014.[4] Partai ini diketuai oleh Kaesang Pangarep sejak 25 September 2023.
            [5] Partai ini cenderung mengambil target partisipan kalangan anak muda, perempuan, dan lintas
            agama.[6] PSI didirikan untuk menggalang gerakan politik yang dilandasi oleh rasa solidaritas
            untuk kemanusiaan. Hal tersebut dikarenakan partai ini meyakini bahwa yang lebih penting dari
            politik adalah kemanusiaan.</item>
        <item>Partai Golongan Karya atau secara umum disingkat dengan Partai Golkar adalah sebuah partai
            politik di Indonesia. Didirikan sebagai Sekretariat Bersama Golongan Karya ((Sekber Golkar)
            pada tahun 1964, dan berpartisipasi untuk pertama kalinya dalam pemilihan umum nasional pada
            1971 sebagai Golkar (Golongan Karya). Partai Golongan Karya tidak resmi menjadi partai politik
            hingga tahun 1999, ketika Golkar diperlukan untuk menjadi sebuah partai untuk mengikuti
            pemilihan.</item>
        <item>Partai Bulan Bintang (PBB) adalah sebuah partai politik Indonesia berasaskan Islam dan
            juga sebagai partai penerus Masyumi yang pernah berjaya pada masa Orde Lama. Partai Bulan
            Bintang didirikan pada 17 Juli 1998.</item>
        <item>Partai Demokrat atau secara umum disingkat dengan PD adalah sebuah partai politik Indonesia.
            Partai ini didirikan pada 9 September 2001 dan disahkan pada 27 Agustus 2003. Pendirian partai
            ini erat kaitannya dengan niat untuk membawa Susilo Bambang Yudhoyono, yang kala itu menjadi
            Menteri Koordinator bidang Politik dan Keamanan di bawah Presiden Megawati, menjadi presiden.
            Karena hal inilah, Partai Demokrat terkait kuat dengan figur Yudhoyono.</item>
        <item>Partai Kebangkitan Bangsa (PKB), adalah sebuah partai politik berideologi Moderat di Indonesia.
            Partai ini didirikan di Jakarta pada tanggal 23 Juli 1998 (29 Rabiul Awal 1419 Hijriah)
            yang dideklarasikan oleh para kiai-kiai Nahdlatul Ulama, seperti Munasir Ali, Ilyas Ruhiat,
            Abdurrahman Wahid, Mustofa Bisri, Zuhdi Fatkur dan Muhith Muzadi.</item>
    </string-array>
    <integer-array name="data_photo">
        <item>@drawable/pdi</item>
        <item>@drawable/pan</item>
        <item>@drawable/hanura</item>
        <item>@drawable/pks</item>
        <item>@drawable/perindo</item>
        <item>@drawable/psi</item>
        <item>@drawable/golkar</item>
        <item>@drawable/pbb</item>
        <item>@drawable/demokrat</item>
        <item>@drawable/pkb</item>
    </integer-array>
</resources>